styles/styles.css
@import url("reset.css");

@font-face {
  font-family: "Karla";
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url(/fonts/KarlaNormal500.woff2) format("woff2");
  unicode-range:
    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
    U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
    U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: "Moon Bold";
  font-style: normal;
  font-weight: bold;
  font-display: swap;
  src: url(/fonts/MoonBold.otf) format("opentype");
}

:root {
  --tier-heading-bg-S: #ff7f7e;
  --tier-heading-bg-A: #ffbf7f;
  --tier-heading-bg-B: #feff7f;
  --tier-heading-bg-C: #7eff80;
  --tier-heading-bg-D: #7fffff;
  --tier-heading-bg-F: #807fff;
  --tier-heading-bg-O: #aaaaaa;
}

html {
  font:
    18px / 1.25 Karla,
    Helvetica,
    Calabri,
    Arial,
    sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Moon Bold", sans-serif;
}

h1 {
  font-size: 2.5rem;
}

main {
  max-width: 1000px;
}

.button-as-link {
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  color: inherit;
  text-decoration: underline;
}

.index-list {
  list-style: none;
  padding-inline-start: 1rem;
  margin-block: 1rem;

  font-size: 2rem;
}

.tiers__intro {
  padding-inline: 40px;

  display: flex;
  flex-wrap: wrap;
  gap: 1rem 2rem;

  font-size: 1.25rem;
}

.tiers {
  display: flex;
  flex-direction: column;
  gap: 2rem;

  padding-inline: 40px;

  list-style: none;
}

.tier {
  --spacing-common: 1em;
  --cell-size: calc(125px - var(--spacing-common));

  display: flex;
  flex-wrap: wrap; /** Layout note: Remove this, and the extra line in UL goes away */

  container-type: inline-size;
}

.tier > h2 {
  font-family: "Moon Bold", sans-serif;

  margin: 0;
  padding: var(--spacing-common);

  flex: 1 0 var(--cell-size);
  max-width: var(--cell-size);
  display: grid;
  place-content: center;

  background-color: var(--tier-heading-bg, grey);
}

@container (width < 525px) {
  .tier > h2 {
    max-width: unset;
    height: min-content;

    position: sticky;
    top: 0;
  }
}

.tier > .tier__items {
  flex: 3 1 50ch;
}

.tier > .tier__notice {
  padding-inline-start: var(--cell-size);
}

.tier__items {
  margin: 0;
  padding: var(--spacing-common);

  display: flex;
  flex-wrap: wrap;
  gap: 1rem;

  list-style: none;

  background-color: color-mix(
    in oklab,
    var(--tier-heading-bg) 75%,
    rebeccapurple
  );
}

.tier__items > li > :where(button, .on-deck) {
  font-family: "Karla", Calibri, Arial, sans-serif;

  padding: var(--spacing-common);
  border: 0;
  border-radius: 10px;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);

  min-width: var(--cell-size);
  max-width: 100%;
  min-height: var(--cell-size);
  flex-shrink: 0;

  display: grid;
  place-content: center;

  font-size: 1.5rem;

  --bg-color: color-mix(in oklab, var(--tier-heading-bg) 50%, white);
  background-color: var(--bg-color);
}

.tier__items > li > button:hover {
  background-color: color-mix(in oklab, var(--bg-color) 50%, white);
  cursor: pointer;
}

.tier__description-dialog[open] {
  width: clamp(350px, 50vw, 700px);
  height: clamp(600px, 50vh, 90vh);

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  padding: 1rem 2rem;

  border: 5px solid #888;
  border-radius: 20px;
  box-shadow: 15px 15px 0 rgba(0, 0, 0, 0.2);
}

.tier__description-dialog h2 {
  margin: 0;
}

.tier__description-dialog footer {
  position: sticky;
  bottom: -1.25rem;

  padding-block: 1.25rem;

  background-color: white;
  border-block-start: 2px solid #888;
}

.tier__description-dialog button {
  align-self: flex-end;
  width: fit-content;
}

::backdrop {
  background-color: rgba(0, 0, 0, 0.3);
}

.tier-desc {
  display: none;
}

.tier-desc:target {
  display: block;
}

.tier-desc > header {
  position: sticky;
  top: -1rem;
  z-index: 2;

  padding-block: 1rem;

  background-color: white;
  border-block-end: 2px solid #888;
}

.tier-desc .rank-wrapper {
  display: inline-block;
  padding-inline: 0.5em;

  background-color: var(--bg-color);

  border-radius: 5px;
}

.tier-desc > article {
  position: relative;
}

.tiers-background {
  position: relative;
}

.border-bottom__colors {
  border-bottom-width: 5px;
  border-bottom-style: solid;
  border-image: linear-gradient(
      in oklab to right,
      var(--tier-heading-bg-S) 17%,
      var(--tier-heading-bg-A) 17% 34%,
      var(--tier-heading-bg-B) 34% 51%,
      var(--tier-heading-bg-C) 51% 68%,
      var(--tier-heading-bg-D) 68% 85%,
      var(--tier-heading-bg-F) 85%
    )
    100 5;
}

